# demo-cmake-build-action

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
.github/: build_cpp_project.yml
.github/workflows/: build_cpp_project.yml  build_cpp_project_win.yml
src/: CMakeLists.txt  main.cpp
src/MathLib/: CMakeLists.txt  MathLib.cpp  MathLib.h
tests/: CMakeLists.txt  main_tests.cpp
